# cameracket

./: .gitignore  README.md  config.rkt  examples.rkt  grab.rkt  install.rkt  main.rkt
doc/: CameRacket Referenz-Handbuch.odt
images/: cameracket_logo.psd
opencv-grab_c/: CMakeLists.txt  Makefile  build-32.sh  build-64.sh  fallback.profile
opencv-grab_c/msvc2010/: opencv-grab_c.vcxproj
opencv-grab_c/msvc2012/: opencv-grab_c.sln  opencv-grab_c.vcxproj
opencv-grab_c/src/: CMakeLists.txt  opencv-grab_c.cxx  opencv-grab_c.hxx  os_settings.hxx
