cmake_minimum_required(VERSION 3.1)

project(opencv-grab_c)

set(OPENCV_GRAB_C_BIN_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/bin)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OPENCV_GRAB_C_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OPENCV_GRAB_C_BIN_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OPENCV_GRAB_C_BIN_DIR})

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
	string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OPENCV_GRAB_C_BIN_DIR})
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OPENCV_GRAB_C_BIN_DIR})
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${OPENCV_GRAB_C_BIN_DIR})
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPE)

set(CMAKE_MACOSX_RPATH FALSE)

#Find OpenCV
find_package(OpenCV REQUIRED)

add_subdirectory(src)